# PyUVS-old

./: .gitignore  CITATION.cff  LICENSE.txt  MANIFEST.in  README.md  along_slit_geography_img.py  along_slit_spectra.py  along_slit_spectra0.py  ames.py  calcurve.py  gain_correction.py  gcm.py  ideas.txt  iuvs_nonlinear_gain_correction.sav  junk.py  l1c.py  l1c_0.py  l1c_franck.py  l1c_justin_wavs.py  l1c_retry.py  l1c_wav_dependent.py  l1cfranck.py  lmd.py  longer-term-items.txt  lya.py  lya_scratch.py  mission_temps.py  outline.txt  pyproject.toml  repo_ideas.txt  requirements.txt  science_week.txt  setup.cfg  setup.py  solar_flux.py  stest.py  structure.txt  test1024.py  todo.txt  wav_shifted_hfc.py
aux/: disk_lores_456-598.sav
builddocs/: conf.py  database.rst  index.rst  magic_notes.txt  notes.rst
doc/: make_documentation.py  newdoc.py
docs/: .buildinfo  conf.py  files.html  genindex.html  index.html  magic_notes.txt  notes.html  objects.inv  py-modindex.html  science_week.html  science_week.rst  search.html  searchindex.js
examples/: README.rst  plot_apoapse_dayside_globe.py  plot_apoapse_muv_quicklook.py  plot_flatfield_differences.py  plot_sensitivity_curves.py
maven_iuvs/: __init__.py  misc.py
pyuvs/: __init__.py  anc.py  constants.py  data_contents.py  data_converter.py  data_files.py  delete_files.py  filenames.py  files.py  finder.py  geography.py  graphics.py  holder.py  junk.py  l1c.py  mars_time.py  misc.py  mlr.py  orbit.py  science_week.py  solar_shift.py  spatial.py  spectra.py  spice.py  swath.py  time.py  todo.txt  utc.py  utils.py
pyuvs-old/: orbit.py
scratch/: asdf.py  netcdf.py  testgeo.py
tests/: hello.py  junk.py  scratch.py  test_file.py  test_files.py
(+770 files in other folders)
