[metadata]
name = pyuvs
version = 0.1.0
author = kconnour
home_page = https://github.com/kconnour/PyUVS
description = Make working with MAVEN/IUVS data suck less.

[options]
include_package_data = True
python_requires = >= 3.9
packages = find:
install_requires =
   astropy
   numpy
   spiceypy

[options.extras_require]
all =
   Cartopy
   Sphinx
   matplotlib
   sphinx-rtd-theme

docs =
   Sphinx
   sphinx-rtd-theme

graphics =
   Cartopy
   matplotlib
