[metadata]
name = pyuvs
version = 0.1.0
author = kconnour
home_page = https://github.com/kconnour/PyUVS
description = Make working with MAVEN/IUVS data suck less.

[options]
include_package_data = True
python_requires = >= 3.9
packages = find:
install_requires =
   astropy
   matplotlib
   numpy
   spiceypy

[options.extras_require]
docs =
   Sphinx
   pydata-sphinx-theme
   sphinx-gallery

graphics =
   Cartopy

test =
   pytest