[metadata]
name = pyuvs
version = 0.1.0
author = kconnour and zachariahmilby
home_page = https://github.com/kconnour/PyUVS
description = A package that makes working with MAVEN/IUVS data sucks less
   hard. It is the ultimate.

[options]
include_package_data = True
python_requires = >= 3.9
packages = find:
install_requires =
   numpy

[options.extras_require]
all =
   Cartopy
   Sphinx
   astropy
   matplotlib
   pydata-sphinx-theme
   sphinx-gallery
   spiceypy
   pytest

database =
   numpy

datafiles =
   astropy

docs =
   Sphinx
   pydata-sphinx-theme
   sphinx-gallery

graphics-advanced =
   Cartopy
   matplotlib

graphics-basic =
   matplotlib

spice =
   spiceypy

test =
   pytest
